--- a/blockchain.html
+++ b/blockchain.html
@@ -24,13 +24,13 @@
             <div class="links">
               <form action="content.php" method="post">
                 <ul>
-                  <li><button type="submit" id="blockchain1" name="bc1">1. Blockchain-Based Protocol Tachyon Network Releases White Paper</button></li>
+                  <li><button class="button" type="submit" id="blockchain1" name="bc1">1. Blockchain-Based Protocol Tachyon Network Releases White Paper</button></li>
                   <div id="here1"></div>
-                  <li><button type="submit" id="blockchain2" name="bc2">2. Animoca Brands to Develop Blockchain-Based MotoGP Manager Game</button></li>
+                  <li><button class="button" type="submit" id="blockchain2" name="bc2">2. Animoca Brands to Develop Blockchain-Based MotoGP Manager Game</button></li>
                   <div id="here2"></div>
-                  <li><button type="submit" id="blockchain3" name="bc3">3. Scalability on Blockchain: Is There a Solution?</button></li>
+                  <li><button class="button" type="submit" id="blockchain3" name="bc3">3. Scalability on Blockchain: Is There a Solution?</button></li>
                   <div id="here3"></div>
-                  <li><button type="submit" id="blockchain4" name="bc4">4. AI Firm Core Scientific Acquires Creator of Mining Program Honeyminer</button></li>
+                  <li><button class="button" type="submit" id="blockchain4" name="bc4">4. AI Firm Core Scientific Acquires Creator of Mining Program Honeyminer</button></li>
                   <div id="here4"></div>
                 </ul>
               </form>
