--- a/landingPage.html
+++ b/landingPage.html
@@ -15,10 +15,13 @@
               $("#here").load("blockchain.html");
           });
           $("#link3").click(function(){
-              $("#here").load("addsysteminfo.html");
+              $("#here").load("arAndvr.html");
           });
           $("#link4").click(function(){
-              $("#here").load("Deletesysteminfo.html");
+              $("#here").load("cloudComputing.html");
+          });
+          $("#link5").click(function(){
+              $("#here").load("bigData.html");
           });
       });
     </script>
@@ -28,7 +31,7 @@
       <div class="topnavbar">
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="landingPage.html">Home</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">About</a></li>
           </ul>
