--- a/landingPage.html
+++ b/landingPage.html
@@ -18,23 +18,21 @@
           </ul>
         </nav>
       </div>
-      <div class="main-content">
-        <div class="sidenavbar">
-          <nav>
+      <div>
+        <div class="sidenav">
             <ul>
               <li><a href="#">Link 1</a></li>
               <li><a href="#">Link 2</a></li>
               <li><a href="#">Link 3</a></li>
               <li><a href="#">Link 4</a></li>
             </ul>
-          </nav>
-          <div class="content specialContent">
-            <section>
-              <header>
-                <h2>Hello World!</h2>
-              </header>
-            </section>
-          </div>
+        </div>
+        <div class="content specialContent">
+          <section>
+            <header>
+              <h2>Hello World!</h2>
+            </header>
+          </section>
         </div>
       </div>
     </div>
