--- a/landingPage.html
+++ b/landingPage.html
@@ -12,7 +12,7 @@
               $("#here").load("artificialintelligence.html");
           });
           $("#link2").click(function(){
-              $("#here").load("automatic.html");
+              $("#here").load("blockchain.html");
           });
           $("#link3").click(function(){
               $("#here").load("addsysteminfo.html");
@@ -38,9 +38,10 @@
         <form>
           <ul>
             <li> <a id="link1">Artificial Intelligence</a></li>
-            <li> <a id="link2">Machine Learning</a></li>
-            <li> <a id="link3">Big Data</a></li>
-            <li> <a id="link4">Hadoop data Structure</a></li>
+            <li> <a id="link2">BlockChain</a></li>
+            <li> <a id="link3">Augmented Reality and Virtual Reality</a></li>
+            <li> <a id="link4">Cloud Computing</a></li>
+            <li> <a id="link5">Big data</a></li>
           </ul>
         </form>
       </div>
