--- a/landingPage.html
+++ b/landingPage.html
@@ -12,7 +12,7 @@
               $("#here").load("artificialintelligence.html");
           });
           $("#link2").click(function(){
-              $("#here").load("blockchain.html");
+              $("#here").load("blockchain.php");
           });
           $("#link3").click(function(){
               $("#here").load("arAndvr.html");
